--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -1215,34 +1215,45 @@ table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>td:first-child:before,
 	left:6px;
 	content: '\e250';
     font-family: 'Glyphicons Halflings';
-    font-size: 1em;
-    line-height: 1.84em;
-	top:23.63%;
-	width:1.5em;
-	height:1.56em;
-	-webkit-border-radius: 1.6em;
-	-webkit-border-bottom-right-radius: 1.7em;
-	-webkit-border-bottom-left-radius: 1.7em;
-	-moz-border-radius: 1.6em;
-	-moz-border-radius-bottomright: 1.7em;
-	-moz-border-radius-bottomleft: 1.7em;
-	border-radius: 1.6em;
-	border-bottom-right-radius: 1.7em;
-	border-bottom-left-radius: 1.7em;
+    font-size: 1.1em;
+    line-height: 1.1em;
+	top:29.6%;
+	width:1em;
+	height:1em;
+	-webkit-border-radius: 1em;
+	-webkit-border-bottom-right-radius: 1em;
+	-webkit-border-bottom-left-radius: 1em;
+	-moz-border-radius: 1em;
+	-moz-border-radius-bottomright: 1em;
+	-moz-border-radius-bottomleft: 1em;
+	border-radius: 1em;
+	border-bottom-right-radius: 1em;
+	border-bottom-left-radius: 1em;
 	margin-left:10%;
 	color:#009CDE;
 	}
+table#dashboardtabletwo.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>td:first-child:before, table#dashboardtabletwo.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>th:first-child:before, table#responseamendtabletwo.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>td:first-child:before, table#responseamendtabletwo.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>th:first-child:before {
+	vertical-align: middle;
+    display: block;
+    top: 0;
+    position: relative;
+    float: left;
+	margin-left:0;
+	}
+table#dashboardtabletwo.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>td:first-child, table#dashboardtabletwo.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>th:first-child {
+    padding-left: 0;
+	}
 table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"].odd>td:first-child:before, table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"].odd>th:first-child:before, table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"].odd>td:first-child:before, table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"].odd>th:first-child:before {
-	background-color: #f1f1f1;
-	border: .2em solid #f1f1f1;
+	background-color: transparent;
+	border: .2em solid transparent;
 	}
 table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"].even>td:first-child:before, table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"].even>th:first-child:before, table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"].even>td:first-child:before, table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"].even>th:first-child:before {
-	background-color: #fafafa;
-	border: .2em solid #fafafa;
+	background-color: transparent;
+	border: .2em solid transparent;
 	}
 table.dataTable.dtr-inline.collapsed>tbody>tr.odd.parent>td:first-child:before, table.dataTable.dtr-inline.collapsed>tbody>tr.odd.parent>th:first-child:before {
-	background-color: #f1f1f1!important;
-	border: .2em solid #f1f1f1!important;
+	background-color: transparent!important;
+	border: .2em solid transparent!important;
 	color:#808080!important;
 	content: '\e252'!important;
 	}
